--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "backend",
     "version": "1.0.0",
+    "engines": {
+        "node": "16.4.2",
+        "npm": "7.24.1"
+    },
     "description": "",
     "main": "index.js",
     "scripts": {
